<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".createActivity">

    <EditText
        android:id="@+id/t1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:autofillHints="" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"

        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/t3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/t3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/enter_password"

        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        app:layout_constraintVertical_bias="0.19999999"
        android:autofillHints="" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="30dp"
        android:visibility="invisible"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress1"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="invisible" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_finish_the_process"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintVertical_bias="0.96" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="78dp"
        android:layout_height="78dp"
       tools:src="@tools:sample/avatars"
        app:civ_border_color="#EAD6D6"
        app:civ_border_width="2dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_a_profile_picture"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>